--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cffi==1.16.0
 charset-normalizer==3.3.0
 cryptography==41.0.4
 Deprecated==1.2.14
+dj-database-url==2.1.0
 Django==4.2.6
 django-encrypted-id-cryptography==1.1.0
 django-environ==0.11.2
@@ -20,6 +21,7 @@ pycparser==2.21
 pytz==2023.3.post1
 requests==2.31.0
 sqlparse==0.4.4
+typing_extensions==4.11.0
 tzdata==2023.3
 urllib3==2.0.7
 whitenoise==6.6.0
